--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://unpkg.com/geometric@2/build/geometric.min.js"></script>
     <title>WindytheWeatherApp</title>
 </head>
 <body>
