--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="icon" href="favicon.ico">
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css' rel='stylesheet' />
     <script src="https://unpkg.com/geometric@2/build/geometric.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180460901-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-180460901-1');
+    </script>
     <title>WindytheWeatherApp</title>
 </head>
 <body>
